--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ivanov</groupId>
-    <artifactId>criteria-query-in-spring-boot</artifactId>
+    <artifactId>globalExceptionHandler-and-data-validation</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>criteria-query-in-spring-boot</name>
-    <description>criteria-query-in-spring-boot</description>
+    <name>globalExceptionHandler-and-data-validation</name>
+    <description>globalExceptionHandler-and-data-validation</description>
     <properties>
         <java.version>17</java.version>
         <maven.checkstyle.plugin.configLocation>checkstyle.xml</maven.checkstyle.plugin.configLocation>
@@ -65,6 +65,10 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
         </dependency>
     </dependencies>
     <build>
