Spring Boot / Spring Boot Security

--- a/src/main/resources/db/changelog/changes/02-create-users-table.yaml
+++ b/src/main/resources/db/changelog/changes/02-create-users-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: create-users-table
-      author: ivanov
+      author: Ivanov Yurii
       changes:
         - createTable:
             tableName: users
