--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>3.1.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>ivanov</groupId>
-    <artifactId>globalExceptionHandler-and-data-validation</artifactId>
+    <groupId>ivanov.yurii</groupId>
+    <artifactId>online-book-store</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>globalExceptionHandler-and-data-validation</name>
-    <description>globalExceptionHandler-and-data-validation</description>
+    <name>online-book-store</name>
+    <description>online-book-store</description>
     <properties>
         <java.version>17</java.version>
         <maven.checkstyle.plugin.configLocation>checkstyle.xml</maven.checkstyle.plugin.configLocation>
@@ -89,6 +89,11 @@
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>1.9.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
     </dependencies>
