--- a/src/main/resources/db/changelog/changes/01-create-books-table.yaml
+++ b/src/main/resources/db/changelog/changes/01-create-books-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: create-books-table
-      author: ivanov
+      author: Ivanov Yurii
       changes:
         - createTable:
             tableName: books
