--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   db:
-    image: mysql
+    image: mysql:8.0.36
     container_name: mysqldb
     restart: unless-stopped
     env_file: ./.env
