--- a/src/main/resources/db/changelog/changes/05-set-bcrypt-password.yaml
+++ b/src/main/resources/db/changelog/changes/05-set-bcrypt-password.yaml
@@ -20,3 +20,9 @@ databaseChangeLog:
             columns:
               - column: {name: password, value: '$2a$10$86wfRrmeDWEMShMTYLJsL.KcFIea6E7J/g3YwYwFAIC0e6ML947PS'}
             where: id = 3
+
+        - update:
+            tableName: users
+            columns:
+              - column: { name: password, value: '$2a$12$lPCqiQN1ukzl4wX8HgSTJ.x.Pch33sOYvCfIaLNPpzDgFdiiOSEvK' }
+            where: id = 4
