--- a/src/main/resources/db/changelog/changes/16-add-shoppingCarts-data.yaml
+++ b/src/main/resources/db/changelog/changes/16-add-shoppingCarts-data.yaml
@@ -15,3 +15,7 @@ databaseChangeLog:
             tableName: shopping_carts
             columns:
               - column: { name: user_id, value: '3' }
+        - insert:
+            tableName: shopping_carts
+            columns:
+              - column: { name: user_id, value: '4' }
