Added and fixed search methods, other fixes

--- a/src/main/resources/db/changelog/changes/07-create-table-assign-role-to-user.yaml
+++ b/src/main/resources/db/changelog/changes/07-create-table-assign-role-to-user.yaml
@@ -10,9 +10,15 @@ databaseChangeLog:
                   name: user_id
                   type: bigint
                   constraints:
+                    foreignKeyName: fk_users_roles_users
+                    references: users(id)
                     nullable: false
+                    deleteCascade: false
               - column:
                   name: roles_id
                   type: bigint
                   constraints:
+                    foreignKeyName: fk_users_roles_roles
+                    references: roles(id)
                     nullable: false
+                    deleteCascade: false
