--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/book?serverTimeZone=UTC
-spring.datasource.username=root
-spring.datasource.password=12345678
+spring.config.import=optional:file:.env[.properties]
+spring.datasource.url=${MYSQLDB_URL}
+spring.datasource.username=${MYSQLDB_USER}
+spring.datasource.password=${MYSQLDB_ROOT_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
-jwt.expiration=300000
-jwt.secretString=online-book-store-ivanov.yuriitrsthrt6rujryyjethe5ye56yh6e5
+jwt.expiration=${JWT_EXPIRATION}
+jwt.secretString=${JWT_SECRET_STRING}
