--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:tc:mysql:8.0.36:///test_bookDB
+spring.config.import=optional:file:.env[.properties]
+spring.datasource.url=jdbc:tc:mysql:8.0.33:///test_bookDB
 spring.datasource.username=test
 spring.datasource.password=test
 
-jwt.expiration=3000000
-jwt.secretString=online-book-store-ivanov.yuriitrsthrt6rujryyjethe5ye56yh6e5
+jwt.expiration=${JWT_EXPIRATION}
+jwt.secretString=${JWT_SECRET_STRING}
