--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,6 @@
-spring.config.import=optional:file:.env[.properties]
 spring.datasource.url=jdbc:tc:mysql:8.0.33:///test_bookDB
 spring.datasource.username=test
 spring.datasource.password=test
 
-jwt.expiration=${JWT_EXPIRATION}
-jwt.secretString=${JWT_SECRET_STRING}
+jwt.expiration=${secrets.JWT_EXPIRATION}
+jwt.secretString=${secrets.JWT_SECRET_STRING}
