--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,5 +2,5 @@ spring.datasource.url=jdbc:tc:mysql:8.0.33:///test_bookDB
 spring.datasource.username=test
 spring.datasource.password=test
 
-jwt.expiration=${secrets.JWT_EXPIRATION}
-jwt.secretString=${secrets.JWT_SECRET_STRING}
+jwt.expiration=${{secrets.JWT_EXPIRATION}
+jwt.secretString=${{secrets.JWT_SECRET_STRING}
