--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.1'
+version: '3.8'
 
 services:
-  db:
+  mysql-db:
     image: mysql:8.0.33
     container_name: mysqldb
     restart: unless-stopped
@@ -13,16 +13,25 @@ services:
     ports:
       - "$MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT"
     command: --innodb-redo-log-capacity=10485760
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
+
   app:
-    depends_on:
-      - db
     image: online-book-store
+    container_name: shop-keeper-app
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: on-failure
-    build: .
     env_file: ./.env
     ports:
       - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
       - $DEBUG_PORT:$DEBUG_PORT
+    depends_on:
+      mysql-db:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url" : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE",
