Added a file with a collection for postman, added pictures, screenshots and LICENSE. Refactor README.md, fix some bag. Refactor v1.1.0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
 
   app:
     image: online-book-store
-    container_name: shop-keeper-app
+    container_name: online-book-store-app
     build:
       context: .
       dockerfile: Dockerfile
